--- a/capstone project.ipynb
+++ b/capstone project.ipynb
@@ -2,25 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#import libraries\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +27,8 @@
     }
    ],
    "source": [
+    "#print statement\n",
+    "\n",
     "print('Hello Capstone Project Course!')"
    ]
   },
